<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RehabCoach</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="welcome_message">Welcome to OSU Rehab Coach</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="WelcomeImage">Rehab Coach Welcome Screen Image (rehabws.jpg)</string>
    <string name="homescreentitle">Activities</string>

</resources>
